# fake-log-collector

./: .gitignore  LICENSE  README.md  docker-compose.yml  run.sh
Docker/: bootstrap.sh
Dockers/fake-log-collector/: Dockerfile  bootstrap.sh
Dockers/grafana/dashboards/: Container_Metrics.json  Fake_Logs.json
Dockers/hadoop/: Dockerfile  bootstrap.sh  run-container.sh
Dockers/influxdb/: bootstrap.sh  influxdb.conf  init-influxdb.sh
Dockers/kafka-single-node/: Dockerfile  bootstrap.sh  run-container.sh
Dockers/telegraf/: telegraf.conf
log-generators/: log_generator.py  requirements.txt  test_consumer.py  utils.py
src/cpp/: CMakeLists.txt  main.cpp
src/cpp/consumer-cpp/: CMakeLists.txt  consumer_config.cpp  consumer_configs.cpp  consumer_utils.cpp  main.cpp  mqueue_sender.cpp
src/cpp/consumer-cpp/include/: consumer_configs.h  consumer_configs.hpp  consumer_utils.h  consumer_utils.hpp  mqueue_sender.h  mqueue_sender.hpp
src/cpp/include/: consumer_config.h
src/cpp/save-to-hdfs/: CMakeLists.txt  date_sync.cpp  hdfs_writer.cpp  logger.cpp  main.cpp  mqueue_receiver.cpp
src/cpp/save-to-hdfs/include/: date_sync.hpp  hdfs_writer.h  hdfs_writer.hpp  logger.hpp  mqueue_receiver.h  mqueue_receiver.hpp
src/cpp/write-to-influxdb/: CMakeLists.txt  influxdb_writer.cpp  main.cpp  mqueue_receiver.cpp
src/cpp/write-to-influxdb/include/: influxdb_writer.hpp  mqueue_receiver.hpp
src/java/: DateFormatConverter.java  LogSplitter.java  TestConsumer.java  Transformer.java  TransformerConfig.java  TransformerTopology.java
src/java/transformer/: Transformer.java  (+2 more)
(+18 files in other folders)
